--- a/libtransact/Cargo.toml
+++ b/libtransact/Cargo.toml
@@ -50,3 +50,4 @@ ursa-compat = ["ursa"]
 redis-db = ["redis"]
 contract = []
 contract-address = ["contract"]
+contract-address-key-hash = ["contract-address"]
