--- a/libtransact/Cargo.toml
+++ b/libtransact/Cargo.toml
@@ -51,3 +51,4 @@ redis-db = ["redis"]
 contract = []
 contract-address = ["contract"]
 contract-address-key-hash = ["contract-address"]
+contract-address-double-key-hash = ["contract-address"]
