Add TripleKeyHashAddresser implementation
Adds an implementation of the Addresser trait for a natural
key represented as a tuple of three strings. Also adds a
function used to calculate the hash lengths from each part
of the key provided in the tuple of three strings.

Signed-off-by: Shannyn Telander <telander@bitwise.io>

--- a/libtransact/Cargo.toml
+++ b/libtransact/Cargo.toml
@@ -52,3 +52,4 @@ contract = []
 contract-address = ["contract"]
 contract-address-key-hash = ["contract-address"]
 contract-address-double-key-hash = ["contract-address"]
+contract-address-triple-key-hash = ["contract-address"]
