Run Addresser tests
Adds a step to the test runner to include the tests in all of the
Addresser implementations, using a feature which is dependent on
each.

Signed-off-by: Shannyn Telander <telander@bitwise.io>

--- a/libtransact/Cargo.toml
+++ b/libtransact/Cargo.toml
@@ -53,3 +53,8 @@ contract-address = ["contract"]
 contract-address-key-hash = ["contract-address"]
 contract-address-double-key-hash = ["contract-address"]
 contract-address-triple-key-hash = ["contract-address"]
+contract-address-test = [
+    "contract-address-double-key-hash",
+    "contract-address-key-hash",
+    "contract-address-triple-key-hash",
+]
