--- a/libtransact/Cargo.toml
+++ b/libtransact/Cargo.toml
@@ -46,6 +46,7 @@ experimental = [
     "contract-address-double-key-hash",
     "contract-address-key-hash",
     "contract-address-triple-key-hash",
+    "key-value-state",
     "redis-db",
 ]
 sawtooth-compat = ["sawtooth-sdk"]
@@ -56,3 +57,4 @@ contract-address = ["contract"]
 contract-address-key-hash = ["contract-address"]
 contract-address-double-key-hash = ["contract-address"]
 contract-address-triple-key-hash = ["contract-address"]
+key-value-state = []
