--- a/libtransact/Cargo.toml
+++ b/libtransact/Cargo.toml
@@ -46,6 +46,7 @@ experimental = [
     "contract-address-double-key-hash",
     "contract-address-key-hash",
     "contract-address-triple-key-hash",
+    "contract-context",
     "key-value-state",
     "redis-db",
 ]
@@ -58,3 +59,4 @@ contract-address-key-hash = ["contract-address"]
 contract-address-double-key-hash = ["contract-address"]
 contract-address-triple-key-hash = ["contract-address"]
 key-value-state = []
+contract-context = ["contract", "contract-address"]
