--- a/libtransact/Cargo.toml
+++ b/libtransact/Cargo.toml
@@ -47,6 +47,7 @@ experimental = [
     "contract-address-key-hash",
     "contract-address-triple-key-hash",
     "contract-context",
+    "contract-context-key-value",
     "key-value-state",
     "redis-db",
 ]
@@ -59,4 +60,5 @@ contract-address-key-hash = ["contract-address"]
 contract-address-double-key-hash = ["contract-address"]
 contract-address-triple-key-hash = ["contract-address"]
 contract-context = ["contract", "contract-address"]
+contract-context-key-value = ["contract-context", "key-value-state"]
 key-value-state = []
