Add SmartContract trait
Adds a SmartContract trait, which uses a KeyValueTransactionContext
rather than a TransactionContext in the apply method and to be used
in conjunction with the TransactionHandler trait. This trait is
behind the contract-handler-key-value trait.

Signed-off-by: Shannyn Telander <telander@bitwise.io>

--- a/libtransact/Cargo.toml
+++ b/libtransact/Cargo.toml
@@ -48,6 +48,7 @@ experimental = [
     "contract-address-triple-key-hash",
     "contract-context",
     "contract-context-key-value",
+    "contract-handler-key-value",
     "key-value-state",
     "redis-db",
 ]
@@ -61,4 +62,8 @@ contract-address-double-key-hash = ["contract-address"]
 contract-address-triple-key-hash = ["contract-address"]
 contract-context = ["contract", "contract-address"]
 contract-context-key-value = ["contract-context", "key-value-state"]
+contract-handler-key-value = [
+    "contract-context-key-value",
+    "contract-address"
+]
 key-value-state = []
