Add SmartContract trait
Adds a SmartContract trait, which implements the TransactionHandler
trait. This trait is behind the contract-handler trait.

Signed-off-by: Shannyn Telander <telander@bitwise.io>

--- a/libtransact/Cargo.toml
+++ b/libtransact/Cargo.toml
@@ -48,6 +48,7 @@ experimental = [
     "contract-address-triple-key-hash",
     "contract-context",
     "contract-context-key-value",
+    "contract-handler",
     "key-value-state",
     "redis-db",
 ]
