Add simple_xo example using Addresser
Adds an implementation of the simple XO example which uses
the KeyHashAddresser, an implementation of the Addresser trait.

Signed-off-by: Shannyn Telander <telander@bitwise.io>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,2 +1,2 @@
 [workspace]
-members = ["libtransact", "examples/simple_xo"]
+members = ["libtransact", "examples/simple_xo", "examples/simple_key_xo"]
