Add initial structure for Addresser example
Adds an `address_generator` module in /examples to hold a
simple program that will be able to take in a prefix and
key and compute the address, based on the functionality of
the Addresser implementations.

Signed-off-by: Shannyn Telander <telander@bitwise.io>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,2 +1,2 @@
 [workspace]
-members = ["libtransact", "examples/simple_xo"]
+members = ["libtransact", "examples/simple_xo", "examples/address_generator"]
