Add example to calculate radix address
Adds an example program which takes in a prefix and an optional, up to
three, arguments to calculate a radix address.

Signed-off-by: Shannyn Telander <telander@bitwise.io>

--- a/examples/address_generator/Cargo.toml
+++ b/examples/address_generator/Cargo.toml
@@ -5,4 +5,9 @@ authors = ["Cargill Incorporated"]
 edition = "2018"
 
 [dependencies]
-transact = { path = "../../libtransact", features = ["contract-address-key-hash"] }
+clap = "2.32"
+transact = { path = "../../libtransact", features = [
+                                            "contract-address-key-hash",
+                                            "contract-address-double-key-hash",
+                                            "contract-address-triple-key-hash",
+                                            ] }
