--- a/examples/simple_xo/Cargo.toml
+++ b/examples/simple_xo/Cargo.toml
@@ -7,7 +7,16 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-transact = { version = "0.1.6", features = ["sawtooth-compat"] }
 sawtooth-xo = "0.3"
 hex = "0.3"
 sha2 = "0.8"
+
+[dependencies.transact]
+path = "../../libtransact"
+features = [
+    "contract-address-double-key-hash",
+    "contract-address-key-hash",
+    "contract-address-triple-key-hash",
+    "contract-context",
+    "contract-handler",
+]
