Add Addresser implementations as dependencies
Adds all Addresser implementations' feature flags as dependencies for
the contract-context-key-value flag, as the tests for the KeyValue-
TransactionContext use all of these implementations.

Signed-off-by: Shannyn Telander <telander@bitwise.io>

--- a/libtransact/Cargo.toml
+++ b/libtransact/Cargo.toml
@@ -101,7 +101,13 @@ contract-address-double-key-hash = ["contract-address"]
 contract-address-triple-key-hash = ["contract-address"]
 contract-archive = ["bzip2", "contract", "glob", "semver", "serde", "serde_derive", "serde_yaml", "tar"]
 contract-context = ["contract", "contract-address"]
-contract-context-key-value = ["contract-context", "key-value-state"]
+contract-context-key-value = [
+    "contract-address-double-key-hash",
+    "contract-address-key-hash",
+    "contract-address-triple-key-hash",
+    "contract-context",
+    "key-value-state"
+]
 family-command = []
 family-xo = ["rand_hc", "workload"]
 key-value-state = []
