WIP - Smart Contract trait
Signed-off-by: Shannyn Telander <telander@bitwise.io>

--- a/libtransact/Cargo.toml
+++ b/libtransact/Cargo.toml
@@ -84,6 +84,7 @@ experimental = [
     "contract-address-triple-key-hash",
     "contract-context",
     "contract-context-key-value",
+    "contract-engine",
     "family-command",
     "family-xo",
     "key-value-state",
@@ -102,6 +103,7 @@ contract-address-triple-key-hash = ["contract-address"]
 contract-archive = ["bzip2", "contract", "glob", "semver", "serde", "serde_derive", "serde_yaml", "tar"]
 contract-context = ["contract", "contract-address"]
 contract-context-key-value = ["contract-context", "key-value-state"]
+contract-engine = ["contract", "contract-context"]
 family-command = []
 family-xo = ["rand_hc", "workload"]
 key-value-state = []
